@@ -307,7 +307,9 @@ void alSourcei( ALuint sid, ALenum param, ALint i1 )
 		case AL_BUFFER:
 		case AL_LOOPING:
 		case AL_SOURCE_RELATIVE:
+#ifdef LINUX_AL
 		case AL_STREAMING:
+#endif
 			/*
 			 * We handle these natively.
 			 */
@@ -365,7 +367,9 @@ void alSourcei( ALuint sid, ALenum param, ALint i1 )
 	 */
 	switch( param ) {
 		case AL_LOOPING:
+#ifdef LINUX_AL
 		case AL_STREAMING:
+#endif
 		case AL_SOURCE_RELATIVE:
 			inrange = _alCheckRangeb( i1 );
 			break;
@@ -436,10 +440,12 @@ void alSourcei( ALuint sid, ALenum param, ALint i1 )
 				_alSource2D(src);
 			}
 			break;
+#ifdef LINUX_AL
 		case AL_STREAMING:
 			src->isstreaming.isset = AL_TRUE;
 			src->isstreaming.data = i1;
 			break;
+#endif
 		default:
 			_alDebug(ALD_SOURCE, __FILE__, __LINE__,
 				"alSourcei: invalid or stubbed source param 0x%x",
@@ -477,11 +483,12 @@ void alSourcef( ALuint sid, ALenum param, ALfloat f1 ) {
 		case AL_BUFFER:
 		case AL_LOOPING:
 		case AL_SOURCE_RELATIVE:
+#ifdef LINUX_AL
 		case AL_STREAMING:
 			alSourcei( sid, param, (ALint) f1 );
-
 			return;
 			break;
+#endif
 		case AL_PITCH:
 		case AL_MIN_GAIN:
 		case AL_MAX_GAIN:
@@ -558,11 +565,12 @@ void alSourcefv( ALuint sid, ALenum param, const ALfloat *fv1 )
 		case AL_BUFFER:
 		case AL_LOOPING:
 		case AL_SOURCE_RELATIVE:
+#ifdef LINUX_AL
 		case AL_STREAMING:
 			alSourcei( sid, param, (ALint) fv1[0] );
-
 			return;
 			break;
+#endif
 		case AL_PITCH:
 		case AL_MIN_GAIN:
 		case AL_MAX_GAIN:
@@ -898,7 +906,9 @@ void alGetSourceiv( ALuint sid, ALenum param, ALint *retref )
 
 		switch( param ) {
 			case AL_LOOPING:
+#ifdef LINUX_AL
 			case AL_STREAMING:
+#endif
 			case AL_SOURCE_RELATIVE:
 				*retref = * (ALboolean *) temp;
 				break;
@@ -968,6 +978,7 @@ void alGetSourceiv( ALuint sid, ALenum param, ALint *retref )
 		  	*retref = src->bid_queue.read_index;
 		  }
 		  break;
+#ifdef LINUX_AL
 		case AL_BYTE_LOKI:
 		  /* AL_BYTE_LOKI is not setable, and has no default. */
 		  switch(src->state) {
@@ -980,11 +991,14 @@ void alGetSourceiv( ALuint sid, ALenum param, ALint *retref )
 			    break;
 		  }
 		  break;
+#endif
 		case AL_SOURCE_STATE:
 		  *retref = src->state;
 		  break;
 		case AL_LOOPING:
+#ifdef LINUX_AL
 		case AL_STREAMING:
+#endif
 		case AL_SOURCE_RELATIVE:
 			/*
 			 * These all have default states, but must be handled
@@ -1123,11 +1137,15 @@ void alGetSourcefv( ALuint sid, ALenum param, ALfloat *values ) {
 			numvalues = 1;
 			break;
 		case AL_LOOPING:
+#ifdef LINUX_AL
 		case AL_STREAMING:
+#endif
 		case AL_SOURCE_RELATIVE:
 		case AL_BUFFERS_QUEUED:
 		case AL_BUFFERS_PROCESSED:
+#ifdef LINUX_AL
 		case AL_BYTE_LOKI:
+#endif
 		case AL_SOURCE_STATE:
 		case AL_BUFFER:
 			/* conversion to integer */
@@ -2825,7 +2843,9 @@ static void _alInitSource( ALuint sid ) {
 	 */
 
 	src->isstreaming.isset = AL_FALSE;
+#ifdef LINUX_AL
 	_alSourceGetParamDefault( AL_STREAMING, &src->isstreaming.data );
+#endif
 
 	src->isrelative.isset = AL_FALSE;
 	_alSourceGetParamDefault( AL_SOURCE_RELATIVE, &src->isrelative.data );
@@ -3223,9 +3243,11 @@ void *_alGetSourceParam(AL_source *source, ALenum param )
 		case AL_SOURCE_RELATIVE:
 			return &source->isrelative.data;
 			break;
+#ifdef LINUX_AL
 		case AL_STREAMING:
 			return &source->isstreaming.data;
 			break;
+#endif
 		case AL_VELOCITY:
 			return &source->velocity.data;
 			break;
@@ -3300,9 +3322,11 @@ ALboolean _alSourceIsParamSet( AL_source *source, ALenum param ) {
 		case AL_SOURCE_RELATIVE:
 			return source->isrelative.isset;
 			break;
+#ifdef LINUX_AL
 		case AL_STREAMING:
 			return source->isstreaming.isset;
 			break;
+#endif
 		case AL_VELOCITY:
 			return source->velocity.isset;
 			break;
@@ -3384,9 +3408,11 @@ void _alSourceGetParamDefault( ALenum param, ALvoid *retref ) {
 			break;
 		case AL_LOOPING:
 		case AL_SOURCE_RELATIVE:
+#ifdef LINUX_AL
 		case AL_STREAMING:
 			*bp = AL_FALSE;
 			break;
+#endif
 		case AL_MAX_DISTANCE:
 			*fp = FLT_MAX;
 			break;
